--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.11",
     "next": "14.2.5",
     "react": "^18",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18",
     "sharp": "^0.33.4"
   },
