--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "dayjs": "^1.11.11",
+    "gsap": "^3.12.5",
     "next": "14.2.5",
     "react": "^18",
     "react-countdown": "^2.3.5",
