--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-countdown": "^2.3.5",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
