--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@hookform/resolvers": "^3.9.0",
     "dayjs": "^1.11.11",
     "gsap": "^3.12.5",
     "next": "14.2.5",
     "react": "^18",
     "react-countdown": "^2.3.5",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
