--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,10 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
 	"organizeImports": {
-		"enabled": true
+		"enabled": false
+	},
+	"files": {
+		"ignore": [".next"]
 	},
 	"linter": {
 		"enabled": true,
@@ -13,7 +16,6 @@
 			"style": {
 				"useSelfClosingElements": "off"
 			}
-		},
-		"ignore": ["./next"]
+		}
 	}
 }
