--- a/package.json
+++ b/package.json
@@ -30,13 +30,11 @@
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"husky": "^9.0.11",
-		"tsc-files": "^1.1.4",
 		"typescript": "^5"
 	},
 	"husky": {
-    "pre-push": "lint-staged"
-  },
-	"lint-staged": {
-		"**/*.ts": "tsc-files --noEmit"
-	}
+		"hooks": {
+			"pre-push": "npx tsc"
+		}
+  }
 }
