send payload from fe to google sheet

--- a/biome.json
+++ b/biome.json
@@ -17,7 +17,10 @@
 				"useSelfClosingElements": "off"
 			},
 			"suspicious": {
-				"noExplicitAny": "off"
+				"noExplicitAny": "warn"
+			},
+			"correctness": {
+				"useExhaustiveDependencies": "warn"
 			}
 		}
 	}
