--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@gsap/react": "^2.1.1",
 		"@hookform/resolvers": "^3.9.0",
+		"axios": "^1.7.2",
 		"dayjs": "^1.11.11",
 		"googleapis": "^140.0.1",
 		"gsap": "^3.12.5",
