--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"dependencies": {
 		"@gsap/react": "^2.1.1",
 		"@hookform/resolvers": "^3.9.0",
+		"@upstash/ratelimit": "^2.0.0",
+		"@vercel/kv": "^2.0.0",
 		"axios": "^1.7.2",
 		"dayjs": "^1.11.11",
 		"googleapis": "^140.0.1",
