setup amazon-ses for sending email notification

--- a/biome.json
+++ b/biome.json
@@ -14,10 +14,12 @@
 				"useAltText": "off"
 			},
 			"style": {
-				"useSelfClosingElements": "off"
+				"useSelfClosingElements": "off",
+				"noNonNullAssertion": "off"
 			},
 			"suspicious": {
-				"noExplicitAny": "warn"
+				"noExplicitAny": "warn",
+				"noAsyncPromiseExecutor": "off"
 			},
 			"correctness": {
 				"useExhaustiveDependencies": "warn"
