--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-countdown": "^2.3.5",
 		"react-dom": "^18",
 		"react-hook-form": "^7.52.1",
+		"react-hot-toast": "^2.4.1",
 		"react-icons": "^5.2.1",
 		"sharp": "^0.33.4",
 		"yup": "^1.4.0"
