--- a/biome.json
+++ b/biome.json
@@ -24,6 +24,9 @@
 			},
 			"correctness": {
 				"useExhaustiveDependencies": "warn"
+			},
+			"security": {
+				"noDangerouslySetInnerHtml": "warn"
 			}
 		}
 	}
