--- a/src/components/particles/config.json
+++ b/src/components/particles/config.json
@@ -8,20 +8,10 @@
 			}
 		},
 		"color": {
-			"value": "#FFD700"
+			"value": "#A67C52"
 		},
 		"shape": {
 			"type": "circle"
-		},
-		"opacity": {
-			"value": 0.5,
-			"random": false,
-			"anim": {
-				"enable": false,
-				"speed": 1,
-				"opacity_min": 0.1,
-				"sync": false
-			}
 		},
 		"size": {
 			"value": 3,
