create load image scripts

--- a/biome.json
+++ b/biome.json
@@ -33,7 +33,14 @@
 			},
 			"security": {
 				"noDangerouslySetInnerHtml": "warn"
+			},
+			"complexity": {
+				"noForEach": "off"
 			}
 		}
+	},
+	"formatter": {
+		"indentStyle": "space",
+		"indentWidth": 2
 	}
 }
