--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"autoprefixer": "^10.4.20",
 		"husky": "^9.0.11",
+		"postcss": "^8.4.41",
+		"tailwindcss": "^3.4.9",
 		"typescript": "^5"
 	}
 }
