--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@aws-sdk/client-ses": "^3.616.0",
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.9.0",
+    "@mantine/core": "^7.12.1",
+    "@mantine/hooks": "^7.12.1",
     "@upstash/ratelimit": "^2.0.0",
     "@vercel/kv": "^2.0.0",
     "axios": "^1.7.2",
@@ -39,6 +41,8 @@
     "autoprefixer": "^10.4.20",
     "husky": "^9.0.11",
     "postcss": "^8.4.41",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.9",
     "typescript": "^5"
   }
