--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss": "^8.4.41",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.4.9",
     "typescript": "^5"
   }
