--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "sharp": "^0.33.4",
     "yup": "^1.4.0"
   },
