--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^7.12.1",
     "@upstash/ratelimit": "^2.0.0",
     "@vercel/kv": "^2.0.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "circletype": "^2.3.0",
     "classnames": "^2.5.1",
