--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@hookform/resolvers": "^3.9.0",
     "@mantine/core": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.46.1",
     "@upstash/ratelimit": "^2.0.0",
     "@vercel/kv": "^2.0.0",
     "animate.css": "^4.1.1",
