--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.616.0",
+    "@emotion/react": "^11.14.0",
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.9.0",
     "@mantine/core": "^7.12.1",
@@ -29,6 +30,7 @@
     "next": "14.2.5",
     "next-scroll-restorer": "^0.9.7",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.14",
     "react-countdown": "^2.3.5",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
